# apzkr-pzpi-21-8-holia-stanislav

./: README.md  apzkr-pzpi-21-8-holia-stanislav.txt
apzkr-pzpi-21-8-holia-stanislav/Task1-Server/fieldforge/: Dockerfile  django.sh  docker-compose.yml  fieldforge.env  manage.py  requirements.txt  wait-for-postgres.sh
apzkr-pzpi-21-8-holia-stanislav/Task1-Server/fieldforge/djangoapp/: backends.py  models.py  permissions.py  renderers.py  urls.py
apzkr-pzpi-21-8-holia-stanislav/Task1-Server/fieldforge/djangoapp/serializers/: __init__.py  admin_serializer.py  login_serializer.py  map_serializer.py  mine_serializer.py  registration_serializer.py  results_serializer.py  settings_serializer.py  task_serializer.py  training_serializer.py  user_serializer.py
apzkr-pzpi-21-8-holia-stanislav/Task1-Server/fieldforge/djangoapp/views/: __init__.py  admin_view.py  login_view.py  mine_view.py  registration_view.py  settings_view.py  task_view.py  training_view.py  user_view.py
apzkr-pzpi-21-8-holia-stanislav/Task1-Server/fieldforge/fieldforge/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
apzkr-pzpi-21-8-holia-stanislav/Task2-IoT/fieldforge_iot/: CMakeLists.txt  main.cpp
apzkr-pzpi-21-8-holia-stanislav/Task3-WebClient/fieldforge/: package-lock.json  package.json
apzkr-pzpi-21-8-holia-stanislav/Task3-WebClient/fieldforge/src/: App.css  App.jsx  index.jsx
apzkr-pzpi-21-8-holia-stanislav/Task3-WebClient/fieldforge/src/config/: i18n.js
apzkr-pzpi-21-8-holia-stanislav/Task3-WebClient/fieldforge/src/shared/: AuthService.jsx
(+20 files in other folders)
